--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,28 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
-</head>
-<body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Day 2 - Interactive Form</title>
+    <link href="/src/output.css" rel="stylesheet">
+  </head>
+  <body class="bg-gray-100">
+    <header class="text-center py-8">
+      <h1 class="text-4xl font-bold">Registration Form</h1>
+    </header>
+    <form action="#" method="post" class="bg-white shadow-md rounded px-8 pt-6 pb-6 mb-4 max-w-md mx-auto transform hover:shadow-x1 transition duration-300 ease-in-out">
+      <fieldset class="text-lg font-semibold mb-4">
+        <legend>Contact Information</legend>
+        <div class="mb-4">
+          <label for="name" class="block text-sm font-medium text-gray-700">Name:</label>
+          <input type="text" id="name" name="name" required class="mt-1 p-2 block w-full rounded-md border outline-none border-gray-300 focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 transform hover:scale-105 focus:scale-100 transition duration-300 ease-in-out"/>
+        </div>
+        <div class="mb-4">
+          <label for="email" class="block text-sm font-medium text-gray-700">Email:</label>
+          <input type="email" id="email" name="email" required class="mt-1 p-2 block w-full rounded-md border outline-none border-gray-300 focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 transform hover:scale-105 focus:scale-100 transition duration-300 ease-in-out"/>
+        </div>
+      </fieldset>
+      <button type="submit" class="w-full py-3 px-4 text-white font-semibold bg-indigo-500 rounded-md focus:outline-none focus:bg-indigo-600 hover:bg-indigo-600 transform hover:scale-105 active:scale-95 transition duration-300 ease-in-out">Submit</button>
+    </form>
+  </body>
 </html>
